--- a/python-jenkins-argocd-k8s/deploy/deploy.yaml
+++ b/python-jenkins-argocd-k8s/deploy/deploy.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: todo
-        image: abhishekf5/todo-app:v1
+        image: passy1990/todo-app:v1
         ports:
         - containerPort: 8000
