--- a/python-jenkins-argocd-k8s/deploy/pod.yaml
+++ b/python-jenkins-argocd-k8s/deploy/pod.yaml
@@ -5,6 +5,6 @@ metadata:
 spec:
   containers:
   - name: todo-app
-    image: abhishekf5/todoapp:v1
+    image: passy1990/todoapp:v1
     ports:
     - containerPort: 8000
